--- a/bosque-palmas-machin/assets/style.css
+++ b/bosque-palmas-machin/assets/style.css
@@ -183,9 +183,10 @@ a:hover { text-decoration: underline; }
 }
 
 .date-days {
-  font-size: 2.5em;
+  font-size: 2em;
   font-weight: bold;
   margin: 4px 0;
+  line-height: 1.1;
 }
 
 .date-year {
